# hybrid-meeting-notes

./: .env.example  .gitignore  ARCHITECTURE_INFOGRAPHIC_SPEC.md  Dockerfile  LINKEDIN_POST.md  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
docs/: 01-why-local-first.md  02-setup-ollama.md  03-setup-cloud-providers.md  04-configuring-hybrid-routing.md  05-custom-templates.md  06-teams-integration.md  07-self-hosting-docker.md  08-deploying-to-azure.md  09-security-and-privacy.md  10-contributing.md
examples/: basic_file_processing.py  hybrid_routing.py  teams_polling.py
examples/sample_transcripts/: client_workshop.txt  standup.vtt
meeting_agent/: __init__.py  cli.py  config.py  enhancer.py  models.py  prompts.py  renderer.py  router.py
meeting_agent/normalizers/: __init__.py  json_.py  srt.py  txt.py  vtt.py
meeting_agent/providers/: __init__.py  anthropic_.py  azure_openai_.py  base.py  ollama.py  openai_.py
meeting_agent/sources/: __init__.py  file_source.py  teams_source.py
templates/: client_meeting.md  detailed_notes.md  executive_brief.md  standup_recap.md
tests/: conftest.py  test_config.py  test_normalizers.py  test_renderer.py  test_router.py
