[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-meeting-notes"
version = "0.1.0"
description = "Local-first meeting intelligence with hybrid LLM routing"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Harman Singh" }]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.10.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0.0",
    "click>=8.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.45.0"]
openai = ["openai>=1.50.0"]
all = ["anthropic>=0.45.0", "openai>=1.50.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff", "black"]

[project.scripts]
meeting-agent = "meeting_agent.cli:main"

[tool.setuptools]
packages = ["meeting_agent", "meeting_agent.normalizers", "meeting_agent.providers", "meeting_agent.sources"]
